--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -6,11 +6,12 @@ sticky: 141
 categories: 408
 banner_img: /img/1920x1080 (7).jpg
 index_img: /img/1920x1080 (7).jpg
+math: true
 ---
 
-## 计算机系统概述
+## 第一章 计算机系统概述
 
-### 计算机发展历程
+### 1.1计算机发展历程
 
 * 低电平表示二进制0
 * 高电平表示二进制1
@@ -19,7 +20,7 @@ index_img: /img/1920x1080 (7).jpg
 * 机器字长：计算机一次整数运算所能处理的二进制位数
 * 摩尔定律：集成电路上可容纳的晶体管数目，约每隔18个月便会增加一倍，整体性能也将提升一倍
 
-### 计算机硬件的基本组成
+### 1.2计算机硬件的基本组成
 
 ![](/img/145732.jpg)
 
@@ -58,7 +59,7 @@ index_img: /img/1920x1080 (7).jpg
 * 指令存放于控制器当中，由控制器来解析并且发出相应的控制信号
 * 注：辅存主要指机械硬盘固态硬盘等，不属于主机内容而属于I/O设备，例如我们手机里的APP平时储存在辅存里面，只有使用的时候才会把辅存里边的app相关的程序数据代码读到主存里边
 
-### 各个硬件的工作原理
+### 1.3各个硬件的工作原理
 
 ![](/img/163027.jpg)
 
@@ -105,7 +106,7 @@ index_img: /img/1920x1080 (7).jpg
 * ACC：累加器，用于存放操作数或者运算结果
 * MQ：乘商寄存器，在乘、除运算时，用于存放操作数或者运算结果
 * X：通用的操作数寄存器，用于存放操作数
-* `ALU：蒜素逻辑单元，通过复杂的电路实现算数运算、逻辑运算，上面为数据储存结构`
+* `ALU：算数逻辑单元，通过复杂的电路实现算数运算、逻辑运算，上面为数据储存结构`
 
 #### 控制器
 
@@ -140,7 +141,7 @@ index_img: /img/1920x1080 (7).jpg
 
 ![](/img/162909.jpg)
 
-### 计算机系统的多级层级结构
+### 1.4计算机系统的多级层级结构
 
 ![](/img/171555.jpg)
 
@@ -150,7 +151,7 @@ index_img: /img/1920x1080 (7).jpg
 
 ![](/img/171511.jpg)
 
-### 计算机的性能指标
+### 1.5计算机的性能指标
 
 ![](/img/194628.jpg)
 
@@ -171,19 +172,38 @@ index_img: /img/1920x1080 (7).jpg
   * 如10Hz可能是每秒钟有10个脉冲信号
 
   ![](/img/191603.jpg)
+  
+  ![](/img/093500.jpg)
 
 $$
 CPU时钟周期=\frac{1}{主频}
 $$
 
 $$
-CPU执行时间（整个程序的耗时）=\frac{CPU时钟周期数}{主频}=\frac{指令条数*CPI}{主频}
+CPU执行时间（整个程序的耗时）=\frac{CPU时钟周期数}{主频}=CPU时钟周期数*时钟周期
+$$
+
+$$
+CPU执行时间=\frac{指令条数*CPI}{主频}=CPI*指令条数*时钟周期
+$$
+
+
+$$
+CPI=\frac{CPU时间*时钟频率}{指令条数}=\frac{CPU时钟周期数}{指令条数}
+$$
+
+
+$$
+CPI=\sum^n_{i=1}(CPI_i*F_i)=\frac{CPU时钟周期数}{指令条数}
+$$
+
+$$
+总时钟周期数=\sum^n_{i=1}(CPI_i*C_i)
 $$
 
 $$
 IPS（每秒执行多少条指令）=\frac{主频}{平均CPI}
 $$
-
 
 
 #### 系统整体的性能指标
@@ -199,3 +219,8 @@ $$
 
 * 基准程序（跑分软件）是用来测量计算机处理速度的一种实用程序，以便于被测量的计算机性能可以与运行相同程序的其他计算机性能进行比较
 
+#### 提高计算机性能的主要途径
+
+* 提高时钟频率（流水线）
+* 优化处理其中数据通路的结构以降低CPI（单周期/多周期/流水线）
+* 采用编译优化措施来减少指令条数或降低指令复杂度（指令系统）
