--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -1,5 +1,21 @@
 ---
 title: 高数错题本
 date: 2024-04-15 18:43:28
-tags:
+tags: 408日常
 ---
+
+# 函数
+
+## 1
+
+![](/img/20240416092634.jpg)
+
+## 2
+
+![](/img/20240416092624.jpg)
+
+## 3
+
+![](/img/20240416171521.jpg)
+
+![](/img/20240416171512.jpg)
