--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -4,18 +4,32 @@ date: 2024-04-15 18:43:28
 tags: 408日常
 ---
 
-# 函数
+## 函数
 
-## 1
+### 1
 
 ![](/img/20240416092634.jpg)
 
-## 2
+### 2
 
 ![](/img/20240416092624.jpg)
 
-## 3
+### 3
 
 ![](/img/20240416171521.jpg)
 
 ![](/img/20240416171512.jpg)
+
+## 数列极限
+
+### 1
+
+![](/img/20240416202637.jpg)
+
+![](/img/20240416202643.jpg)
+
+### 2
+
+![](/img/20240416215941.jpg)
+
+![](/img/20240416215947.jpg)
