--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -33,3 +33,37 @@ tags: 408日常
 ![](/img/20240416215941.jpg)
 
 ![](/img/20240416215947.jpg)
+
+## 函数极限
+
+### 1
+
+![](/img/20240417143846.jpg)
+
+![](/img/20240417143857.jpg)
+
+### 2
+
+![](/img/20240417143902.jpg)
+
+![](/img/20240417143907.jpg)
+
+### 3
+
+![](/img/20240417143917.jpg)
+
+![](/img/20240417143923.jpg)
+
+## 一元函数微分学的概念与计算
+
+### 1
+
+![](/img/20240417165447.jpg)
+
+![](/img/20240417165452.jpg)
+
+### 2
+
+![](/img/20240417165455.jpg)
+
+![](/img/20240417165459.jpg)
