--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -2,6 +2,10 @@
 title: 高数错题本
 date: 2024-04-15 18:43:28
 tags: 408日常
+sticky: 125
+categories: 408
+banner_img: /img/1920x1080s.jpg
+index_img: /img/1920x1080s.jpg
 ---
 
 ## 函数
