--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -71,3 +71,81 @@ index_img: /img/1920x1080s.jpg
 ![](/img/20240417165455.jpg)
 
 ![](/img/20240417165459.jpg)
+
+## 一元函数微分学的几何应用
+
+### 1
+
+![](/img/20240418151238.jpg)
+
+![](/img/20240418151234.jpg)
+
+### 2
+
+![](/img/20240418151256.jpg)
+
+![](/img/20240418151301.jpg)
+
+## 中值定理
+
+### 1
+
+![](/img/162019.png)
+
+#### 2
+
+* 出现三个不同点的值时，两两之间使用拉格朗日中值定理
+
+![](/img/172038.jpg)
+
+![](/img/20240418173645.jpg)
+
+### 3
+
+* 高阶导数用泰勒公式，，或者多次拉格朗日，三阶导数通过二阶导数用平均值，如果三阶导数不连续，则用导数介值定理
+
+![](/img/173741.jpg)
+
+![](/img/20240418174124.jpg)
+
+### 4
+
+* 底为导数时可以尝试用柯西
+
+![](/img/20240418201652.jpg)
+
+![](/img/20240418201658.jpg)
+
+### 5
+
+* 当证明二阶导数大于或者小于某个非零常数时，往往利用泰勒公式
+
+![](/img/20240418201703.jpg)
+
+![](/img/20240418201707.jpg)
+
+## 零点问题与微分不定式
+
+### 1
+
+![](/img/20240418214514.jpg)
+
+![](/img/20240418214527.jpg)
+
+![](/img/20240418214532.jpg)
+
+### 2
+
+![](/img/20240419095203.jpg)
+
+![](/img/20240419095212.jpg)
+
+### 3
+
+![](/img/095802.jpg)
+
+## 一元函数积分学的概念与计算
+
+### 1
+
+![](/img/100804.jpg)
