--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -149,3 +149,25 @@ index_img: /img/1920x1080s.jpg
 ### 1
 
 ![](/img/100804.jpg)
+
+### 2
+
+![](/img/111144.jpg)
+
+![](/img/11207.jpg)
+
+### 3
+
+![](/img/133807.jpg)
+
+### 4
+
+![](/img/134046.jpg)
+
+### 5
+
+![](/img/140820.png)
+
+### 6
+
+![](/img/140820.png)
