--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -170,4 +170,67 @@ index_img: /img/1920x1080s.jpg
 
 ### 6
 
-![](/img/140820.png)
+![](/img/144732.jpg)
+
+### 7
+
+* 括号里面是复杂的参数，直接替换成u
+
+![](/img/162048.jpg)
+
+### 8
+
+* a=b=(a+b)/2
+
+![](/img/164957.jpg)
+
+![](/img/165039.jpg)
+
+## 积分等式与积分不等式
+
+* 端点为0考虑用拉格朗日
+* 出现三个点，考虑两两之间用拉格朗日
+
+### 1
+
+* 含参数的考虑把参数变成x然后移项构造新函数
+
+![](/img/122051.jpg)
+
+### 2
+
+* 被积函数带导数或带变限积分时，考虑分部积分
+* 证明题出现定积分，考虑用：
+  * 区间再现
+  * 中值定理
+  * 分部积分
+
+![](/img/122526.jpg)
+
+### 3
+
+* 出现积分与函数加减运算，一般二者统一化，变成积分加积分或者函数加函数
+* 证明积分不等式可以考虑变上限或者下限为参数，构造变限积分进行求导
+
+![](/img/122743.jpg)
+
+### 4
+
+![](/img/123032.png)
+
+### 5
+
+![](/img/123318.jpg)
+
+### 6
+
+![](/img/132201.jpg)
+
+### 7
+
+* 证明题结论中被积函数有导数，走牛顿莱布尼兹公式，没有就用拉氏
+
+* 如果f(a)=0,f(x)=f(x)-f(a)=$\int_a^x$f'(t)dt
+
+![](/img/134956.jpg)
+
