--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -230,7 +230,28 @@ index_img: /img/1920x1080s.jpg
 
 * 证明题结论中被积函数有导数，走牛顿莱布尼兹公式，没有就用拉氏
 
-* 如果f(a)=0,f(x)=f(x)-f(a)=$\int_a^x$f'(t)dt
+$$
+f(x)=f(x)-f(a)=\int_a^xf'(t)dt~~~~(f(a)=0)
+$$
 
 ![](/img/134956.jpg)
 
+## 多元函数微分学
+
+### 1
+
+* 找区域上的最大值和最小值分两步：
+  * 找区域内部可疑点，导数为0，导数不存在
+  * 找边界上的可疑点，导数为0，导数不存在
+
+![](/img/214824.png)
+
+![](/img/214839.jpg)
+
+### 2
+
+![](/img/214454.jpg)
+
+* 技巧：
+
+![](/img/214358.jpg)
