--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -33,13 +33,13 @@ math: true
 * 采用存储程序的工作方式
   * 将指令以二进制代码的形式事先输入计算机的主储存器（内存），然后按其在存储器中的首地址执行程序的第一条指令，以后就按该程序的规定顺序执行其他指令，直至程序执行结束
   * 得以实现自动化地执行代码
-
 * 计算机由五大部件组成
   * 运算器
   * 控制器
   * 存储器
   * I/O设备
 * 指令和数据以同等地位存于存储器，可按地址寻访
+  * CPU区分指令和数据的依据是二者访问阶段的不同
 * 指令和数据用二进制表示
 * 指令由操作码（操作类型）和地址码（操作数据的地址）组成
 * 以运算器为中心
@@ -202,9 +202,11 @@ $$
 $$
 
 $$
-IPS（每秒执行多少条指令）=\frac{主频}{平均CPI}
+IPS（每秒执行多少条指令）=\frac{主频}{平均CPI}=\frac{指令条数}{执行时间（秒）}
 $$
 
+* 平均CPI=∑各指令CPIx指令混合比
+* 同一套指令集意味着指令总数相同
 
 #### 系统整体的性能指标
 
@@ -224,3 +226,103 @@ $$
 * 提高时钟频率（流水线）
 * 优化处理其中数据通路的结构以降低CPI（单周期/多周期/流水线）
 * 采用编译优化措施来减少指令条数或降低指令复杂度（指令系统）
+
+## 第二章 数据的表示和运算
+
+### 2.1数制与编码
+
+#### 2.1.1 进位计数制
+
+![](/img/194427.jpg)
+
+##### r进制计数法
+
+![](/img/192649.jpg)
+
+![](/img/193026.jpg)
+
+##### 二进制与八进制、十六进制互相转换
+
+* 二到八
+
+![](/img/193146.jpg)
+
+* 二到十六
+
+![](/img/193224.jpg)
+
+* 八到二
+
+![](/img/193324.jpg)
+
+* 十六到二
+
+![](/img/193400.jpg)
+
+##### 十进制转化为任意进制
+
+* 整数部分
+
+![](/img/193825.jpg)
+
+* 小数部分
+
+![](/img/194015.jpg)
+
+* 拼凑法转化为二进制
+
+![](/img/194120.jpg)
+
+#### 2.1.2 BCD（用二进制编码的十进制数）码
+
+![](/img/202034.jpg)
+
+* 四个二进制位表示一个十进制位
+
+![](/img/195755.jpg)
+
+* 8421码映射关系（有权码）
+
+![](/img/195910.jpg)
+
+![](/img/201051.jpg)
+
+![](/img/201326.jpg)
+
+![](/img/201339.jpg)
+
+![](/img/201531.jpg)
+
+* 余3码（无权码）
+
+![](/img/01731.jpg)
+
+* 2421码（有权码）
+
+0-4的首位一定是0，5-9的首位一定是1
+
+![](/img/201940.jpg)
+
+#### 2.1.3 无符号整数的表示和运算
+
+![](/img/203330.jpg)
+
+![](/img/202247.jpg)
+
+##### 无符号整数的表示
+
+![](/img/202618.jpg)
+
+##### 无符号整数的加法运算
+
+![](/img/202806.jpg)
+
+##### 无符号整数的减法运算
+
+![](/img/203011.jpg)
+
+![](/img/203228.jpg)
+
+#### 2.1.4 带符号整数的表示和运算 原反补
+
+![](/img/203430.jpg)
