--- a/source/_posts/计组错题本.md
+++ b/source/_posts/计组错题本.md
@@ -1,5 +1,18 @@
 ---
 title: 计组错题本
 date: 2024-04-15 18:43:37
-tags:
+tags: 408
+banner_img: /img/1920x1080s.jpg
+index_img: /img/1920x1080s.jpg
 ---
+
+##  计算机系统概述
+
+### 计算机的性能指标
+
+#### 1
+
+假定机器M的时钟频率为200MHz，某程序P在机器M上的执行时间为12s。对P优化时，将其所有的乘4指令都换成了一条左移两位的指令，得到优化后的程序P‘。若在M上乘法指令的CPI为102，左移指令的CPI为2，P的执行时间是P’执行时间的1.2倍，则P中有多少条乘法指令被替换成了左移指令执行？
+
+* 分析解答：
+  * P‘的执行时间为10s，P比P'多用了2s，即多200 X 10^6 X 2 = 4 X 10^8 个时钟周期，每条乘法指令比左移指令多100个时钟周期，因为4 X 10^8 / 100=4 X10^6，即有400万条乘法指令被替换为左移指令执行
