--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -255,3 +255,64 @@ $$
 * 技巧：
 
 ![](/img/214358.jpg)
+
+### 3
+
+* 二元函数的驻点：对x的偏导数和对y的偏导数均为0
+
+![](/img/132901.jpg)
+
+## 二重积分
+
+### 1
+
+![](/img/133050.jpg)
+
+![](/img/133152.jpg)
+
+![](/img/133222.jpg)
+
+### 2
+
+![](/img/133602.png)
+
+### 3
+
+![](/img/133837.jpg)
+
+![](/img/133909.jpg)
+
+## 常微分方程
+
+### 1
+
+![](/img/222127.png)
+
+### 2
+
+![](/img/222715.jpg)
+
+![](/img/222740.jpg)
+
+![](/img/222803.jpg)
+
+### 3
+
+![](/img/223600.png)
+
+![](/img/223745.png)
+
+### 4
+
+* 非齐次的解由齐次的解和非齐次的解共同构成，通解代表每个解，通解都由两个解构成代表每个解都由两个解构成，所以特解有可能由非齐和齐次构成，得找出齐次的和非齐次的部分
+
+TIPS:
+
+* ![](/img/230554.jpg)
+
+![](/img/230554.jpg)
+
+### 5
+
+* 非齐次的两个解做差是齐次方程的非零解，几阶就有几个常数，如果找非齐次的通解就是齐次的通解加上非齐次的特解
+
