--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -325,4 +325,78 @@ $$
 
 #### 2.1.4 带符号整数的表示和运算 原反补
 
+![](/img/210101.jpg)
+
 ![](/img/203430.jpg)
+
+![](/img/203630.jpg)
+
+##### 原码表示
+
+![](/img/203927.jpg)
+
+![](/img/204046.jpg)
+
+##### 原码→反码→补码的转换（机算）
+
+![](/img/204256.jpg)
+
+##### 原码、补码快速转换技巧（手算）
+
+![](/img/204650.jpg)
+
+##### 补码的加法运算
+
+![](/img/205003.jpg)
+
+![](/img/205325.jpg)
+
+* 注：由于补码数值不能解读为位权，因此真值需要转换为原码再去找真值
+
+##### 补码的减法运算
+
+* 机算
+
+![](/img/205603.jpg)
+
+* 手算
+  * 找到第一个1，然后1的左边的所有位数包括符号位在内取反，右边保持不变
+
+##### 对比：无符号整数的减法运算
+
+* 无论是带符号整数还是无符号整数的减法，都是被减数不变，减数全部位按位取反、末位+1，减法变加法
+* 计算机内部，所有带符号整数的加减法都要先转化为补码（当然C语言的带符号整数都是用补码来表示的）
+
+![](/img/205857.jpg)
+
+#### 2.1.5 原反补码的特性对比
+
+![](/img/210300.jpg)
+
+##### 各种码的基本特性总结
+
+![](/img/233057.jpg)
+
+#### 2.1.6 移码
+
+![](/img/232157.jpg)
+
+![](/img/232345.jpg)
+
+![](/img/233024.jpg)
+
+![](/img/233200.jpg)
+
+* 移码：补码的基础上将符号位取反。注意：移码只能用于表示整数。
+
+#### 2.1.7 定点小数
+
+![](/img/233350.jpg)
+
+![](/img/233506.jpg)
+
+### 2.2
+
+#### 2.2.1电路的基本原理、加法器设计
+
+#### 2.2.2并行进位加法器
