--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -395,8 +395,119 @@ $$
 
 ![](/img/233506.jpg)
 
+* 定点小数的符号位后面常常用“.”隔开，而定点整数的符号位后面常常用“，”隔开
+
+##### 定点小数原/反/补码的转换
+
+![](/img/220352.jpg)
+
+##### 定点小数的加/减运算
+
+![](/img/220502.jpg)
+
+##### 定点小数vs定点整数
+
+![](/img/220732.jpg)
+
+![](/img/221006.jpg)
+
+##### 小数补码的加法运算
+
+![](/img/221322.jpg)
+
+##### 小数补码的减法运算
+
+![](/img/221432.jpg)
+
 ### 2.2
 
-#### 2.2.1电路的基本原理、加法器设计
+#### 2.2.0 奇偶校验码
 
-#### 2.2.2并行进位加法器
+##### 校验原理简介
+
+![](/img/223201.jpg)
+
+![](/img/223333.jpg)
+
+##### 奇偶校验码
+
+![](/img/223555.jpg)
+
+* 奇偶校验码的缺点：只能发现奇数个位发生传输错误，不能发现偶数个位发生传输错误
+
+偶校验码的硬件实现
+
+ ![](/img/224356.jpg)
+
+#### 2.2.1 电路的基本原理、加法器设计
+
+##### 算术逻辑单元（ALU）
+
+![](/img/225001.jpg)
+
+* 控制信号是由控制单元cu发出的
+
+![](/img/230645.jpg)
+
+* M用来表示做的是逻辑运算还是算术运算，1是逻辑运算，0是算术运算
+  * S0-S3可以用来指明此次要进行的是哪一种算术运算或者哪一种逻辑运算
+  * 此处有4个bit，可以对应16种状态，因此该芯片可以支持16种算术运算和16种逻辑运算
+* 机器字长的真面目就是ALU算术逻辑单元里面可以支持同时输入多少个比特的信息
+* 寄存器的位数和ALU一般保持一致，也即一般寄存器的位数就是机器字长
+* 其余输入和输出信号一般是为了和其他芯片进行串联而设计的
+
+##### 最基本的逻辑运算
+
+* 一个比特的逻辑运算
+* 关于数据的输入和输出，我们都是用电信号来表示的，也就是高低电平
+* 与门
+
+![](/img/231008.jpg)
+
+* 或门
+
+因为只要有一个1结果就是1，即>=1
+
+![](/img/231213.jpg)
+
+* 非门
+
+![](/img/231334.jpg)
+
+* 优先级：与>或
+
+![](/img/231709.jpg)
+
+##### 复合逻辑
+
+* 异或门可用与、或、非组合实现
+
+![](/img/232133.jpg)
+
+![](/img/232213.jpg)
+
+#### 2.2.2 并行进位加法器
+
+#### 2.2.3 补码加减运算器
+
+#### 2.2.4 标志位的生成
+
+#### 2.2.5 定点数的移位运算
+
+#### 2.2.6.1 原码的乘法运算
+
+#### 2.2.6.2 补码的乘法运算
+
+#### 2.2.7.1 原码的除法运算
+
+#### 2.2.7.2 补码的除法运算
+
+#### 2.2.8 C语言类型转换
+
+#### 2.2.9 数据的存储和排列
+
+### 2.3
+
+#### 2.3.1 浮点数的表示
+
+#### 2.3.2 IEEE 754
