--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -316,3 +316,34 @@ TIPS:
 
 * 非齐次的两个解做差是齐次方程的非零解，几阶就有几个常数，如果找非齐次的通解就是齐次的通解加上非齐次的特解
 
+![](/img/232417.jpg)
+
+### 6
+
+![](/img/232647.jpg)
+
+### 7
+
+![](/img/233043.jpg)
+
+### 8
+
+![](/img/233228.jpg)
+
+### 9
+
+* 二阶、高阶的题每一次出现常数，尽快把常数定下来，不要带着C往下走
+
+![](/img/234400.png)
+
+### 10
+
+* 考三次，考四次一定是特殊的能因式分解
+
+![](/img/234838.jpg)
+
+![](/img/235219.png)
+
+![](/img/235530.png)
+
+![](/img/235658.jpg)
