--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -441,6 +441,8 @@ $$
 
 #### 2.2.1 电路的基本原理、加法器设计
 
+![](/img/13636.jpg)
+
 ##### 算术逻辑单元（ALU）
 
 ![](/img/225001.jpg)
@@ -480,15 +482,58 @@ $$
 
 ##### 复合逻辑
 
-* 异或门可用与、或、非组合实现
-
 ![](/img/232133.jpg)
+
+* 异或门可用与、或、非组合实现
+  * 异或的天然逻辑：加法、奇偶校验
 
 ![](/img/232213.jpg)
 
+* 同或门
+
+![](/img/111409.jpg)
+
+##### 用门电路求偶校验位
+
+![](/img/111756.jpg)
+
+##### 一位全加器
+
+![](/img/112850.jpg)
+
+##### 串行加法器
+
+![](/img/ 113045.jpg)
+
+##### 并行加法器
+
+* 串行进位的并行加法器
+
+![](/img/113432.jpg)
+
+这种加法器的运算速度很大程度上取决于每一位进位的产生速度
+
 #### 2.2.2 并行进位加法器
 
+![](/img/113432.jpg)
+
+##### 更快产生进位
+
+![](/img/·114835.jpg)
+
+##### 并行加法器的优化
+
+![](/img/202337.jpg)
+
 #### 2.2.3 补码加减运算器
+
+##### 加法器原理
+
+![](/img/203123.jpg)
+
+##### 补码加/减法运算方法
+
+![](/img/203439.jpg)
 
 #### 2.2.4 标志位的生成
 
