--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -535,11 +535,177 @@ $$
 
 ![](/img/203439.jpg)
 
-#### 2.2.4 标志位的生成
+![](/img/212939.jpg)
+
+![](/img/213351.jpg)
+
+* 有符号整数和无符号整数的加减法虽然共用一套电路，但是判断是否溢出的方式不同
+
+#### 2.2.4.1 加减运算和溢出判断
+
+![](/img/223535.jpg)
+
+##### 原码的加减运算
+
+![](/img/213734.jpg)
+
+##### 补码的加减运算
+
+* -B的补码是B的右数第一个1的左边所有位全部取反
+
+![](/img/215939.jpg)
+
+##### 溢出判断
+
+核心逻辑：两个同号的数相加，最终得到了一个异号的结果
+
+![](/img/20158.jpg)
+
+* 方法一：采用一位符号位
+  * 左边判断是否负+负得正，右边判断是否正+正得负，两个结果只要有一个溢出即答案得1，最后就是存在溢出现象，所以用或运算或起来
+
+![](/img/221225.jpg)
+
+* 方法二：采用一位符号位，根据数据位进位情况判断溢出
+
+  ![](/img/222028.jpg)
+
+  * 上溢
+
+  ![ ](/img/221519.jpg)
+
+  * 下溢
+
+  ![](/img/21733.jpg)
+
+  * 只要发生了溢出，符号位的进位和最高数值位的进位肯定不一样
+
+* 方法三：采用双符号位
+
+![](/img/222145.jpg)
+
+![](/img/222549.jpg)
+
+补码在进行运算之前会复制一个符号位，接下来会让两个符号位同时进行运算
+
+##### 符号扩展
+
+![](/img/223457.jpg)
+
+* 正整数：
+  * 符号位和数值位中间补0
+* 负整数：
+  * 原码：符号位和数值位中间补0
+  * 反码：符号位和数值位中间补1
+  * 补码：符号位和数值位中间补1
+* 正小数：
+  * 最后一位后面补0
+* 负小数
+  * 原码：最后一位后面补0
+  * 反码：最后一位后面补1
+  * 补码：最后一位后面补0
+
+#### 2.2.4.2 标志位的生成
+
+![](/img/224508.jpg)
+
+![](/img/225358.jpg)
+
+* 注：
+  * OF: overflow flag 
+  * SF: sign flag
+  * ZF: zero flag
+  * CF: carry flag（进位、借位标志）
+
+
+
+* OF的标志位仅在有符号数的加减运算中有意义，即如果进行的是无符号数的加减运算，即便OF=1也并不能说明无符号数发生了溢出 
+* 如果减法的CF结果为1，说明产生了借位，也说明被减数比减数要小，意味着最终运算的结果一定是错误的，发生了溢出
+* 有符号数的溢出看OF，无符号数的溢出看CF，都是1为溢出
 
 #### 2.2.5 定点数的移位运算
 
+![](/img/000933.jpg)
+
+![](/img/230137.jpg)
+
+![](/img/232510.jpg)
+
+##### 原码的算术移位
+
+![](/img/231159.jpg)
+
+* 算数右移
+
+![](/img/230702.jpg)
+
+* 算数左移
+
+![](/img/231134.jpg)
+
+* 注：参考C++中的位运算，X>>k等于X/ 2^k，X<<k等于X* 2^k
+
+##### 反码的算术移位
+
+![](/img/231342.jpg)
+
+##### 补码的算术移位
+
+![](/img/232326.jpg)
+
+##### 算术移位的应用举例 
+
+![](/img/235441.jpg)
+
+##### 逻辑移位
+
+![](/img/235520.jpg)
+
+##### 逻辑移位的应用举例
+
+![](/img/000035.jpg)
+
+##### 循环移位
+
+![](/img/000828.jpg)
+
+* 循环补位，移出去的补到最后一位或者最前一位
+* 带进位位的循环移位，相当于把进位位加入队列
+* 循环移位很适合把数据的高字节和低字节进行一个调换
+
 #### 2.2.6.1 原码的乘法运算
+
+##### 手算乘法（十进制）
+
+![](/img/002135.jpg)
+
+##### 手算乘法（二进制）
+
+![](/img/002417.jpg)
+
+##### 原码一位乘法
+
+![](/img/002834.jpg)
+
+![](/img/003021.jpg)
+
+![](/img/003104.jpg)
+
+![](/img/003223.jpg)
+
+![](/img/003331.jpg)
+
+![](/img/003424.jpg)
+
+![](/img/003517.jpg)
+
+##### 原码一位乘法（手算模拟）
+
+*  由于补码乘法用的是双符号位，所以原码的乘法也可以用双符号位以便统一
+
+![](/img/003727.jpg)
+
+* 自己答题时最好还是写出真值所对应的源码机器数
 
 #### 2.2.6.2 补码的乘法运算
 
