--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -419,7 +419,7 @@ $$
 
 ![](/img/221432.jpg)
 
-### 2.2
+### 2.2 运算方法和运算电路
 
 #### 2.2.0 奇偶校验码
 
@@ -709,7 +709,64 @@ $$
 
 #### 2.2.6.2 补码的乘法运算
 
+![](/img/010422.jpg)
+
+##### 补码一位乘法
+
+![](F:\try\home\themes\fluid\source\img\005238.jpg)
+
+* 辅助位就是把MQ寄存器的容量多拓展了一位，用新拓展的一位来存储的
+  * MQ中的最低位指的是当前参与乘法运算的那一位
+  * 原码往ACC、X和MQ里面存绝对值，而补码是直接把符号位也一并存进去了
+  * 被乘数和乘积高位采用的是双符号位补码，而乘数、乘积地位采用的是单符号补码
+
+![](/img/005750.jpg)
+
+##### 补码一位乘法（手算模拟）
+
+![](/img/010309.jpg)
+
 #### 2.2.7.1 原码的除法运算
+
+##### 手算除法（十进制）
+
+![](/img/135750.jpg)
+
+##### 手算除法（二进制）
+
+![](/img/140051.jpg)
+
+##### 原码除法：恢复余数法
+
+![](/img/140417.jpg)
+
+![](/img/140525.jpg)
+
+![](/img/140604.jpg)
+
+![](/img/140745.jpg)
+
+![](/img/140836.jpg)
+
+![](/img/140927.jpg)
+
+![](/img/140951.jpg)
+
+![](/img/141020.jpg)
+
+![](/img/141044.jpg)
+
+![](/img/141148.jpg)
+
+##### 原码除法：恢复余数法（手算）
+
+* 写出①除数和②被除数的绝对值，以及③除数的绝对值的补码和④绝对值负数的补码
+
+![](/img/141612.jpg)
+
+![](/img/141724.jpg)
+
+##### 原码除法：加减交替法（不恢复余数法）
 
 #### 2.2.7.2 补码的除法运算
 
@@ -717,8 +774,12 @@ $$
 
 #### 2.2.9 数据的存储和排列
 
-### 2.3
+### 2.3 浮点数的表示与运算
 
 #### 2.3.1 浮点数的表示
 
 #### 2.3.2 IEEE 754
+
+#### 2.3.3 浮点数的运算
+
+## 第三章 存储系统
