--- a/source/_posts/法学转码心得.md
+++ b/source/_posts/法学转码心得.md
@@ -14,6 +14,8 @@ tags: 水一水
     * acm，蓝桥杯
   * 最好学一点离散数学
 
+* C语言非常重要，看acwing的算法基础和语法基础有利于计组和数据结构的学习
+
 * 学习资料
 
   * 高等数学
@@ -28,18 +30,19 @@ tags: 水一水
     * csapp：深入了解计算机系统（时间不紧急）
     * cs50（时间不紧急）
   * 袁春风老师第二版紫皮书+课后习题答案
-    * 建议计组先听王道课，就跟法学生期末听法考课一样，好上手
-
-  * 操作系统
-
-  * 计算机网络
-
-  * 线性代数
-
-    * 
-
-  * 概率论
-
+    
+* 建议计组先听王道课，就跟法学生期末听法考课一样，好上手
+    
+* 操作系统
+  
+* 计算机网络
+  
+* 线性代数
+  
+  * 
+  
+* 概率论
+  
     
   
     
