--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -768,17 +768,106 @@ $$
 
 ##### 原码除法：加减交替法（不恢复余数法）
 
+![](/img/142632.jpg)
+
+![](/img/142849.jpg)
+
+* 在定点小数的除法运算中，我们会规定被除数一定要小于除数，因为如果大于，则商会>1，而定点小数无法表示大于1的范围，因此当第一步的商是1，说明被除数比除法更大，硬件电路检测出以后会直接停止这些除法的运算
+
 #### 2.2.7.2 补码的除法运算
+
+##### 补码除法：加减交替法
+
+![](/img/143631.jpg)
+
+##### 除法运算总结回顾
+
+![](/img/143758.jpg)
 
 #### 2.2.8 C语言类型转换
 
+* 无符号数和有符号数
+* 长整数变短整数
+* 短整数变长整数
+
+![](/img/144322.jpg)
+
 #### 2.2.9 数据的存储和排列
+
+##### 大小端存储
+
+* 大端存储就是把更高有效字节存储到更低地址的部分，最低有效字节存放到了最高地址部分
+* 小端存储就是在低地址部分存储最低有效字节，在高地址部分存储最高有效字节
+  * 小端方式便于机器处理类似于高精度运算中数字用数组倒存
+
+![](/img/145009.jpg) 
+
+##### 边界对齐
+
+* 注：字节是基本单位，一字节等于8bit，字长是运算的基本单位，即以此能处理多少个字节，多少位就是多少个bit，处理的字节数等于bit/8，半字就是字长的一半
+* 给出访问的字的地址的时候，如何转化为与之对应的字节地址：
+  * 字地址逻辑左移两位
+  * 半字地址逻辑左移一位
+
+![](/img/145826.jpg)
+
+![](/img/145934.jpg)
 
 ### 2.3 浮点数的表示与运算
 
 #### 2.3.1 浮点数的表示
 
+![](/img/155945.jpg)
+
+* 定点数可以表示的数字范围有限，但我们不能无限制地增加数据的长度
+
+##### 从科学计数法理解浮点数
+
+* 阶符为正，小数点右移，阶符为负，小数点左移
+  * 阶码的数值部分意味着要移多少位 
+* 尾数越短，表示的数字精度就越低
+
+##### 浮点数的表示
+
+* 定点数之所以称为定点数是因为小数点的位置固定不变，而浮点数就是小数点的位置是会浮动的
+
+![](/img/153255.jpg)
+
+* 阶码反应浮点数的表示范围及小数点的实际位置
+
+![](/img/153501.jpg)
+
+* 尾数M的数值部分的位数n反应浮点数的精度
+* 尾数给出了一个小数，阶码指明了小数点要向前/后移动几位
+
+![](/img/154034.jpg)
+
+![](/img/154149.jpg)
+
+##### 浮点数尾数的规格化
+
+![](/img/154551.jpg)
+
+* 左规：通过算术左移来把浮点数进行规格化
+
+![](/img/155019.jpg)
+
+##### 规格化浮点数的特点
+
+![](/img/155633.jpg)
+![](/img/155912.jpg)
+
 #### 2.3.2 IEEE 754
+
+##### 移码回顾
+
+![](/img/160319.jpg)
+
+![](/img/160746.jpg)
+
+##### IEEE 754标准
+
+
 
 #### 2.3.3 浮点数的运算
 
