--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -859,6 +859,8 @@ $$
 
 #### 2.3.2 IEEE 754
 
+![](/img/164232.jpg)
+
 ##### 移码回顾
 
 ![](/img/160319.jpg)
@@ -867,8 +869,48 @@ $$
 
 ##### IEEE 754标准
 
+* 在实际计算的时候，可以先把移码看成是无符号数，转换成十进制再减掉偏移量
 
+![](/img/161904.jpg)
+
+![](/img/162018.jpg)
+
+![](/img/63217.jpg)
+
+![](/img/63211.jpg)
+
+* 十六进制一位数字对应4个bit
+
+![](/img/163442.jpg)
+
+![](/img/163653.jpg)
+
+![](/img/164111.jpg)
 
 #### 2.3.3 浮点数的运算
+
+![](/img/172137.jpg)
+
+##### 浮点数的加减运算
+
+* 通常是阶数更小的向阶数更大的对齐
+
+![](/img/64748.jpg)
+
+ ![](/img/165355.jpg)
+
+ ![](/img/165843.jpg)
+
+##### 舍入
+
+![](/img/165955.jpg)
+
+![](/img/171742.jpg)
+
+##### 强制类型转换
+
+* 64位机器里面long向double转换可能产生精度丢失
+
+![](/img/172107.jpg)
 
 ## 第三章 存储系统
