--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -229,6 +229,45 @@ $$
 
 ## 第二章 数据的表示和运算
 
+* 数值数据和非数值数据
+
+  * 数值数据是指能在数轴上找到点的数据
+    * 定点数、浮点数
+  * 非数值数据是指字母、汉字等
+    * char，string
+
+* 数值数据表示的三要素
+
+  * 进位计数值
+  * 定、浮点表示
+  * 如何用二进制编码
+  * 要确定一个数值数据的值必须先确定这三个要素
+
+* 整数都采用补码来表示
+
+  * 但浮点数的尾数用原码定点小数表示
+
+* 补码特性：模运算
+
+  * 在一个模运算系统中，一个数与它除以模以后的余数等价
+  * 一个负数的补码等于模减去该负数的绝对值
+  * 一个正数的补码等于模加上它本身即等于原码
+    * 任何一个数用n位1来减相当于各位取反，末位+1
+
+  ![](/img/73942.jpg)
+
+  * 对于某一确定的模，某数减去小于模的另一个数，总可以用该数加上另一个数符数的补码来替代
+
+* 2的16次方之内要牢记
+
+* 变形（模4）补码：双符号，用于存放可溢出的中间结果
+
+* 无符号数0扩展，带符号整数符号扩展
+
+* 无符号数和带符号数运算一般转化为无符号数
+
+* 因为原码是对称的，所以尾数的表示范围关于原点对称
+
 ### 2.1数制与编码
 
 #### 2.1.1 进位计数制
@@ -331,7 +370,7 @@ $$
 
 ![](/img/203630.jpg)
 
-##### 原码表示
+##### 原码表示(Sign and magnitude)
 
 ![](/img/203927.jpg)
 
