--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -208,6 +208,11 @@ $$
 * 平均CPI=∑各指令CPIx指令混合比
 * 同一套指令集意味着指令总数相同
 
+注：
+
+* 容量是2^k
+* 带宽是10^k
+
 #### 系统整体的性能指标
 
 * 数据通路带宽：数据总线一次所能并行传送信息的位数（各硬件部件通过数据总线传输数据）
@@ -332,6 +337,12 @@ $$
 
 ![](/img/201531.jpg)
 
+某一位加出来>9或者有进位的时候要加6矫正
+
+结果<=9的时候不需要矫正
+
+最高位有进位时，发生溢出
+
 * 余3码（无权码）
 
 ![](/img/01731.jpg)
@@ -416,6 +427,8 @@ $$
 
 ![](/img/233057.jpg)
 
+* 对于负数，数值部分越小，其绝对值越大，即负的越多
+
 #### 2.1.6 移码
 
 ![](/img/232157.jpg)
@@ -478,6 +491,12 @@ $$
 
  ![](/img/224356.jpg)
 
+##### 码距与检错、纠错能力的关系（当d<=4）
+
+* 不用背
+
+![](/img/004101.jpg)
+
 #### 2.2.1 电路的基本原理、加法器设计
 
 ![](/img/13636.jpg)
@@ -501,6 +520,9 @@ $$
 
 * 一个比特的逻辑运算
 * 关于数据的输入和输出，我们都是用电信号来表示的，也就是高低电平
+
+![](/img/21002.jpg)
+
 * 与门
 
 ![](/img/231008.jpg)
@@ -564,6 +586,16 @@ $$
 
 ![](/img/202337.jpg)
 
+![](/img/021135.jpg)
+
+![](/img/021241.jpg)
+
+![](/img/021403.jpg)
+
+![](/img/021435.jpg)
+
+* 注：目前计算机不需要芯片级联，一个CPU芯片中有多个处理器核，一个核中有多个ALU
+
 #### 2.2.3 补码加减运算器
 
 ##### 加法器原理
@@ -588,11 +620,25 @@ $$
 
 ![](/img/213734.jpg)
 
+* 主要用于浮点数尾数运算
+* 符号位和数值部分分开处理
+* 仅对数值部分进行加减运算，符号位起判断和控制作用
+  * 加法：同号求和，异号求差
+  * 减法：异号求和，同号求差
+
 ##### 补码的加减运算
 
 * -B的补码是B的右数第一个1的左边所有位全部取反
 
 ![](/img/215939.jpg)
+
+##### 移码的加减运算
+
+![](/img/023635.jpg)
+
+![](/img/023756.jpg)
+
+* 补码和移码的关系：符号位取反、数值位相同
 
 ##### 溢出判断
 
@@ -626,6 +672,8 @@ $$
 ![](/img/222549.jpg)
 
 补码在进行运算之前会复制一个符号位，接下来会让两个符号位同时进行运算
+
+* 补码乘法中高32位非全0或者全1为溢出
 
 ##### 符号扩展
 
@@ -815,6 +863,9 @@ $$
 
 #### 2.2.7.2 补码的除法运算
 
+* 两个n位补码整数除法运算，被除数需要进行符号扩展，若被除数为2n位，除数为n位，则被除数无需扩展
+* 余数变号不够减，不变号够减
+
 ##### 补码除法：加减交替法
 
 ![](/img/143631.jpg)
@@ -844,6 +895,7 @@ $$
 ##### 边界对齐
 
 * 注：字节是基本单位，一字节等于8bit，字长是运算的基本单位，即以此能处理多少个字节，多少位就是多少个bit，处理的字节数等于bit/8，半字就是字长的一半
+* 字长是数据通路的宽度，字是处理事务的固定长度的二进制数位组，是信息传送的基本单位
 * 给出访问的字的地址的时候，如何转化为与之对应的字节地址：
   * 字地址逻辑左移两位
   * 半字地址逻辑左移一位
@@ -853,6 +905,10 @@ $$
 ![](/img/145934.jpg)
 
 ### 2.3 浮点数的表示与运算
+
+* 数据在数轴上是稀疏、不均匀的，数字越大，间隔越大精度越低
+
+![](/img/234308.jpg)
 
 #### 2.3.1 浮点数的表示
 
@@ -926,9 +982,11 @@ $$
 
 ![](/img/164111.jpg)
 
+![](/img/ 234017.jpg)
+
 #### 2.3.3 浮点数的运算
 
-![](/img/172137.jpg)
+![](/img/172137.jpg)  
 
 ##### 浮点数的加减运算
 
@@ -952,4 +1010,51 @@ $$
 
 ![](/img/172107.jpg)
 
+#### 逻辑数据的编码表示
+
+* 用一位表示，例如真1假0
+* N位二进制数可以表示N个逻辑数据，或者一个位串
+* 位串：用来表示若干个状态位或者控制位（OS中使用较多）
+
+![](/img/001356.jpg)
+
+#### C语言程序中涉及的运算
+
+* 如何从16位采样数据y中提取高位字节，并使低字节为0？
+  * 使用掩码y&0xFF00
+
+* C语言中不区分逻辑移位还是算术移位，由x的类型决定，有符号整数是算术移位，无符号数是逻辑移位
+
+![](/img/014902.jpg)
+
 ## 第三章 存储系统
+
+## 薄弱点
+
+* 溢出判断和标志位判断
+  * 两个数加减乘除的溢出判断：转为真值进行运算看有没有超出表示范围
+* 补码减法运算电路，无符号数和有符号数的减法
+
+* 浮点数的表示和运算
+
+* 地址，字节和进制
+  * 两个16进制数占一个字节，即一个地址空间，一个地址空间等于一个字节
+  * 1B=1地址=2个16进制数=8个bit
+  * 一个16进制数占4个bit
+* 规格化浮点数
+  * 补码和原码尾数的规格化表示
+* 浮点数舍入溢出
+
+* 溢出判断总结
+  * 补码定点加减法的溢出判断：
+    * 一位符号位，操作数符号相同，结果和操作数符号不相同，表示溢出
+    * 双符号位：00,11不溢出，01正溢出，10负溢出
+    * 数值位进位：最高位进位和次高位进位相同无溢出，不同溢出
+  * 无符号数溢出的判断：
+    * CF=sub异或Cout
+  * 乘法的溢出判断：
+    * 乘积高位不全为0或者全为1
+  * 除法的溢出判断：
+    * 商为1
+  * 浮点数的溢出判断：
+    * 阶码上溢
