--- a/source/_posts/高数错题本.md
+++ b/source/_posts/高数错题本.md
@@ -347,3 +347,270 @@ TIPS:
 ![](/img/235530.png)
 
 ![](/img/235658.jpg)
+
+## 无穷级数
+
+### 1
+
+* 证明题一般都是靠大收小收和小发大发证明
+
+* 依靠不等式（尤其是均值不等式），或者用到题目的特殊条件，或者极限的有界性放缩
+
+  ![](/img/213428.jpg)
+
+![](/img/020700.jpg)
+
+![](/img/015902.jpg)
+
+![](/img/015919.jpg)
+
+![](/img/020049.jpg)
+
+![](/img/020515.jpg)
+
+![](/img/020745.jpg)
+
+### 2
+
+* 比较复杂的级数要研究通项
+* 只有正向级数才能等价替换
+
+![](/img/022942.jpg)
+
+### 3
+
+* 有根号就有理化
+
+![](/img/024200.jpg)
+
+### 4
+
+* 级数求和，能拆即拆，一个个做
+* 没有x就创造x
+
+![](/img/025144.jpg)
+
+### 5
+
+![](/img/030025.jpg)
+
+### 6
+
+![](/img/030635.jpg)
+
+### 7
+
+![](/img/031847.jpg)
+
+### 8
+
+* 通项是积分表达式，积不出来的，一般放缩积分然后进行处理（分母变小、分母拿掉）
+
+![](/img/213810.jpg)
+
+### 10
+
+* 根号：通分、约分、有理化、换元、提公因子
+
+![](/img/214455.jpg)
+
+### 11
+
+![](/img/215048.jpg)
+
+### 12
+
+* 研究绝对收敛和条件收敛还可以拆分
+
+![](/img/215248.jpg)
+
+### 13
+
+* 求和先求收敛域和收敛范围
+* 求和技巧：拆开求、分开求；求导消分母，积分还原
+* 幂级数的和函数都是连续函数
+
+![](/img/221402.jpg)
+
+![](/img/222446.jpg)
+
+### 14
+
+* 没有x的级数求和就创造x，把常数改成x
+
+![](/img/223808.jpg)
+
+## 微积分应用
+
+### 1 
+
+* 液体质量公式
+* 功的物理公式
+* 压力的物理公式
+* 引力的物理公式
+* 行星的物理公式
+* 上减下，右减左代表距离
+* 常考：浸水压力、抽水做功、形心问题
+
+![](/img/175001.jpg)
+
+### 2
+
+![](/img/141334.jpg)
+
+### 3
+
+![](/img/142720.jpg)
+
+![](/img/42753.jpg)
+
+### 4
+
+![](/img/43056.jpg)
+
+### 5
+
+* 改变有限个点的值，不影响积分的进行
+
+![](/img/3534.jpg)
+
+### 6
+
+* 级数看不懂就展开
+
+![](/img/ 151042.jpg)
+
+![](/img/51716.jpg)
+
+## 多元函数积分学的基础知识
+
+### 1
+
+* 要找平面靠点和法向量（点法式） 
+* 与两条直线垂直的法向量即两条直线的向量叉乘
+
+![](/img/150648.jpg)
+
+### 2
+
+* 直线在面上的投影，就是过该直线找一个与平面垂直的平面，然后联立，二者的交线即是直线在面上的投影（利用平面束的思想）
+
+  ![](/img/150919.jpg)
+
+  * 把直线改成一般式，构造平面束（一个不变另一个前面加λ）
+  * 法向量内积=0（垂直）得出λ
+  * 联立垂直面和题目面得出交线
+
+* 绕哪个轴转，就解出其他两个变量和该轴变量的关系
+
+* 其余两个变量平方相加，左右相等
+
+![](/img/151246.jpg)
+
+![](/img/151821.jpg)
+
+### 3
+
+![](/img/235447.jpg)
+
+![](/img/108.jpg)
+
+### 4
+
+![](/img/000214.jpg)
+
+### 5
+
+![](/img/004749.jpg)
+
+### 6
+
+![](/img/04929.jpg)
+
+## 三重积分
+
+### 1
+
+![](/img/222011.jpg)
+
+### 2
+
+* 见到有取不到的点，即涉及偏导数不连续的点，先看能不能代入消掉分母（曲线积分和曲面积分），代不进去再挖。
+* 曲线积分和曲面积分化为二重积分或者三重积分以后包括内部空腔，不能把边界的曲面或者曲线积分代进去，只能在曲线积分或者曲面积分的时候代入
+
+![](/img/224326.jpg)
+
+### 3
+
+* 碰到空间曲线喜欢抓参数方程ttt，没有参数方程就构造参数方程
+* 空间曲线优先参数方程，其次斯托克斯
+
+![](/img/225704.jpg)
+
+![](/img/230041.jpg)
+
+### 4
+
+* z在两个水平面之间，被积函数只跟z有关，这种三重积分适合先二后一法 
+
+![](/img/195857.jpg)
+
+### 5
+
+* 曲线积分和曲面积分都可以把方程本身代进去
+
+![](/img/00039.jpg)
+
+### 6
+
+![](/img/200420.jpg)
+
+### 7
+
+* 曲面四面八方都对称，只要出现奇函数都是0
+
+![](/img/200602.jpg)
+
+### 8
+
+* 只要是x的一次方或者y的一次方或者z的一次方或者同时出现都是一次方，作二重积分或者三重积分或者第一型曲线积分或者第一型曲面积分，有技巧，即形心技巧
+* x/y/z的积分可以转化为形心*对应几何量
+  * 二重面积，三重体积，曲线长度，曲面面积
+  * 形心就是图形的中心
+
+![](/img/215022.jpg)
+
+### 9
+
+![](/img/15343.jpg)
+
+### 10
+
+* 第二型曲面积分补面的时候，要保持方向一致，都朝内或者都朝外，指向内部空腔，高斯公式为负，背离内部空腔，高斯公式为正
+* 下侧往下投是负的，上侧往下投是正的
+
+![](/img/0146.jpg)
+
+### 11
+
+![](/img/220448.jpg)
+
+![](/img/220918.jpg)
+
+### 12
+
+* 涉及dz，说明是空间曲线
+  * 空间曲线首选直接法或者说参数法，即把曲线方程爆改参数方程，即改成与t相关 
+    * 联立消掉另一个变量
+    * 顺时针派到负派，逆时针负派到派     
+
+![](/img/21842.jpg)
+
+### 13
+
+* 斯托克斯公式就是化线为面，曲线选一次方的，选最简单的，选平面
+* 选方向用右手定则选法向量
+* 投影：联立方程组消掉z
+
+![](/img/30255.jpg)
+
