--- a/source/_posts/线代错题本.md
+++ b/source/_posts/线代错题本.md
@@ -3,3 +3,264 @@ title: 线代错题本
 date: 2024-05-22 14:13:55
 tags:
 ---
+
+ 刷题型、同质化题不过3
+
+##  行列式
+
+### 1
+
+![](/img/001156.jpg)
+
+### 2
+
+![](/img/01540.jpg)
+
+### 3
+
+![](/img/003032.jpg)
+
+### 4
+
+![](/img/03429.jpg)
+
+### 5
+
+![](/img/005004.jpg)
+
+## 矩阵
+
+### 1
+
+* 对称矩阵相加仍是对称矩阵
+* ATA和AAT一定是对称矩阵
+
+![](/img/233208.jpg)
+
+### 2
+
+![](/img/33624.jpg)
+
+### 3
+
+* 如果给了AB的一个综合性的等式，想办法能不能从中强行把题目所求的等式凑出来，甚至能不能写成等式乘以某个矩阵等于单位阵E，括号外面只剩下游离的单位阵E
+
+![](/img/235529.jpg)
+
+![](/img/235611.jpg)
+
+### 4
+
+* 同义句转换（等价命题）：
+  * A可逆⇿|A|≠0⇿r(A)=n
+
+![](/img/001335.jpg)
+
+![](/img/001322.jpg)
+
+### 5
+
+![](/img/002629.jpg) 
+
+![](/img/002727.jpg)
+
+![](/img/002802.jpg)
+
+![](/img/02854.jpg)
+
+### 6
+
+![](/img/012710.jpg)
+
+![](/img/012818.jpg)
+
+![](/img/012849.jpg)
+
+### 7
+
+* 证明抽象矩阵可逆并求逆：已知F(A)=0题型（定义法） 
+
+![](/img/014103.jpg)
+
+![](/img/014044.jpg)
+
+![](/img/50004.jpg) 
+
+![](/img/150453.jpg)
+
+![](/img/50529.jpg)
+
+![](/img/50556.jpg)
+
+![](/img/h150642.jpg)
+
+### 8
+
+![](/img/151827.jpg)
+
+![](/img/51855.jpg)
+
+### 9
+
+![](/img/152227.jpg)
+
+## 向量组
+
+### 1
+
+![](/img/212222.jpg)
+
+### 2
+
+![](/img/13145.jpg)
+
+### 3
+
+* 直接观察多余向量
+* 利用分块矩阵乘法（通法）
+
+![](/img/14221.jpg)
+
+### 4
+
+* 向量组的秩
+  * 极大无关组的向量个数
+  * 拼成矩阵的秩
+
+![](/img/052.jpg)
+
+![](/img/20037.jpg)
+
+![](/img/254.jpg)
+
+### 5
+
+![](/img/222815.jpg)
+
+![](/img/222750.jpg)
+
+## 线性方程组
+
+### 1
+
+![](/img/5514.jpg)
+
+### 2
+
+![](/img /20228.jpg)
+
+![](/img/223704.jpg)
+
+### 3
+
+![](/img/223752.jpg)
+
+![](/img/31621.jpg)
+
+![](/img/1746.jpg)
+
+### 4
+
+* 基础解系：
+  * 是解
+  * 线性无关
+  * 个数是n-r(A)个
+  * 可以表示任何一个Ax=0的解，基础解系表示不了的就不是解
+
+![](/img/2203.jpg)
+
+![](/img/232450.jpg) 
+
+### 5
+
+![](/img/4340.jpg)
+
+### 6
+
+![](/img/001051.jpg)
+
+## 特征值与特征向量
+
+### 总结
+
+* 已知A和特征值，求特征向量
+
+  * 定义法（Ax=λx）
+  * （λE-A）x=0的所有非零解都是矩阵A属于特征值λ的特征向量 
+
+* 求特征值
+
+  * |λE-A|=0 
+
+  ![](/img/135514.jpg)
+
+* 秩为1的矩阵的性质
+
+![](/img/140615.jpg)
+
+![](/img/40651.jpg)
+
+![](/img/716.jpg)
+
+![](/img/140756.jpg)
+
+* A的各行元素做加法：右边乘上一个均为1的列向量
+
+![](/img\144954.jpg)
+
+![](/img/145039.jpg)
+
+* 分块三角
+
+![](/img/163227.jpg)
+
+### 1
+
+![](/img/ 135514.jpg)
+
+### 2
+
+![](/img/649.jpg)
+
+![](/img/150326.jpg)
+
+### 3
+
+![](/img/152458.jpg)
+
+![](/img/52747.jpg)
+
+![](/img/52849.jpg)
+
+![](/img/53040.jpg)
+
+![](/img/161345.jpg)
+
+![](/img/61812.jpg)
+
+![](/img/161741.jpg)
+
+### 4
+
+![](/img/164128.jpg)
+
+![](/img/64000.jpg)
+
+### 5
+
+![](/img/165953.jpg)
+
+![](/img/170102.jpg)
+
+### 6
+
+![](/img/170608.jpg)
+
+### 7
+
+![](/img/82105.jpg)
+
+### 8
+
+![](/img/82654.jpg)
+
