--- a/source/_posts/线代错题本.md
+++ b/source/_posts/线代错题本.md
@@ -1,7 +1,11 @@
 ---
 title: 线代错题本
 date: 2024-05-22 14:13:55
-tags:
+tags: 408日常
+sticky: 128
+categories: 408
+banner_img: /img/1920x1080 (25).jpg
+index_img: /img/1920x1080 (25).jpg
 ---
 
  刷题型、同质化题不过3
@@ -264,3 +268,28 @@ tags:
 
 ![](/img/82654.jpg)
 
+## 二次型
+
+### 1
+
+![](/img/002012.jpg)
+
+### 2
+
+![](/img/03452.jpg)
+
+![](/img/03555.jpg)
+
+![](/img/003715.jpg)
+
+### 3
+
+![](/img/005249.jpg)
+
+![](/img/5334.jpg)
+
+### 4
+
+### 5
+
+### 6
