--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -1442,27 +1442,88 @@ $$
 
 #### 3.5.5 Cache写策略
 
+![](/img/000548.jpg)
+
 ##### 写命中
 
 ###### 写回法
 
 ![](/img/234426.jpg)
 
+###### 全写法
+
+![](/img/35316.jpg)
+
+![](/img/235443.jpg)
+
+![](/img/235521.jpg)
+
+##### 写不命中
+
+###### 写分配法
+
+![](/img/235851.jpg)
+
+###### 非写分配法
+
+![](/img/00205.jpg)
+
+##### 多级Cache
+
+![](/img/000352.jpg)
+
 ### 3.6 存储器
 
 #### 3.6.1 页式存储器
 
+![](/img/10117.jpg)
+
+![](/img/001742.jpg)
+
+![](/img/002204.jpg)
+
+##### 虚地址vs实地址
+
+![](/img/104737.jpg)
+
+##### 页表：逻辑页号→主存块号
+
+![](/img/104954.jpg)
+
+##### 地址变换过程
+
+* CPU会把指令里边指明的逻辑地址拆分为逻辑页号和页内地址
+
+![](/img/105531.jpg)
+
+##### 地址变换过程（增加TLB）
+
+* cache里面存储的，是我们某一些主存块的数据的一个副本，是一整块一整块调进去
+  * 快表里面存储的是慢表的某一些列表项的副本
+
+![](/img/110029.jpg)
+
 #### 3.6.2 虚拟存储器
 
+##### 页式虚拟存储器
 
+![](/img/110926.jpg)
 
+![](/img/111023.jpg)
 
+##### 存储器的层次化结构
 
+![](/img/11139.jpg)
 
+##### 段式虚拟存储器
 
+![](/img/111336.jpg)
 
+![](/img/111510.jpg)
 
+##### 段页式虚拟存储器
 
+![](/img/11557.jpg)
 
 
 
