--- a/source/_posts/概率论错题.md
+++ b/source/_posts/概率论错题.md
@@ -162,27 +162,206 @@ tags:
 
 ### 9
 
-![](F:\try\home\themes\fluid\source\img\033338.jpg)
+![](/img/033338.jpg)
 
-![](F:\try\home\themes\fluid\source\img\033726.jpg)
+![](/img/033726.jpg)
 
 ### 10
 
-![](F:\try\home\themes\fluid\source\img\035229.jpg)
+![](/img/035229.jpg)
 
 ### 11
 
-![](F:\try\home\themes\fluid\source\img\041914.jpg)
+![](/img/041914.jpg)
 
-![](F:\try\home\themes\fluid\source\img\042007.jpg)
+![](/img/042007.jpg)
 
 ![](/img/042046.jpg)
 
-
-
-### 12
-
 ## 多维随机变量及其分布
+
+### 1
+
+* 已知边缘求联合分布律——打表格，边缘写边上
+
+![](/img/230156.jpg)
+
+### 2
+
+* 条件概率密度仅限于二维连续型
+* 只要一个二元函数，能够拆成两个一元函数相乘，则X与Y相互独立
+  * 一看前面的函数部分，可不可以分离成g(x)h(y)
+  * 二看xy是不是各写各的范围，或者是不是都是常数范围
+
+![](/img/231405.jpg)
+
+![](/img/31536.jpg)
+
+![](/img/231607.jpg)
+
+![](/img/14231700.jpg)
+
+![](/img/31745.jpg)
+
+![](/img/31843.jpg)
+
+### 3
+
+* 离散型二维随机变量独立性判断技巧
+  * 只要pij出现0，XY一定不独立
+  * X,Y独立⇿行（列）对应成比例（秩为1）
+
+![](/img/23223553.jpg)
+
+
+
+![](/img/2238.jpg)
+
+![](/img/32305.jpg)
+
+![](/img/14232325.jpg)
+
+### 4
+
+* 求谁不积谁（求X是对X型区域积分，求Y是对Y型区域积分）
+
+![](/img/33020.jpg)
+
+* 不积先定限
+
+![](/img/614233109.jpg)
+
+* dy画竖线，dx画横线（限内画条线，先交取下限，后交取上限）
+
+![](/img/233307.jpg)
+
+
+
+![](/img/3538.jpg)
+
+![](/img/233615.jpg)
+
+### 5
+
+* 
+
+![](/img/34240.jpg)
+
+![](/img/234320.jpg)
+
+![](/img/234434.jpg)
+
+![](/img/235601.jpg)
+
+![](/img/000120.jpg)
+
+![](/img/000426.jpg)
+
+![](/img/001024.jpg)
+
+### 6
+
+![](/img/01908.jpg)
+
+![](/img/001852.jpg)
+
+## 7
+
+* 题型：最大最小值分布
+
+* 指数分布技巧：
+
+![](/img/003058.jpg)
+
+* 如果n个随机变量互相独立且分别服从指数分布，那么他们的最小值分布依然是服从指数分布，参数就是他们的参数相加
+
+![](/img/003207.jpg)
+
+![](/img/003150.jpg)
+
+## 8
+
+* 题型：求Z=g（X,Y）的分布——X，Y一个离散型一个连续型（分布函数法+对离全集分解）
+
+![](/img/003658.jpg)
+
+![](/img/003853.jpg)
+
+## 9
+
+* 二维(X,Y)求概率，X，Y一个离散型一个连续性（对离全集分解）
+
+![](/img/215655.jpg)
+
+![](/img/220138.jpg)
+
+![](/img/20217.jpg)
+
+## 10
+
+![](/img/220548.jpg)
+
+![](/img/220611.jpg)
+
+![](/img/220642.jpg)
+
+![](/img/220658.jpg)
+
+## 11
+
+![](/img/222830.jpg)
+
+## 12
+
+![](/img/ 230452.jpg)
+
+![](/img/230903.jpg)
+
+![](/img/230848.jpg)
+
+![](/img/15230928.jpg)
+
+## 13
+
+![](/img/231627.jpg)
+
+![](/img/234403.jpg)
+
+![](/img/234231.jpg)
+
+![](/img/34301.jpg)
+
+![](/img/234719.jpg)
+
+![](/img/235004.jpg)
+
+## 14
+
+* 题型：已知Y在X满足一定条件下的条件分布，求Y的分布函数F(y)
+
+![](/img/235158.jpg)
+
+![](/img/000431.jpg)
+
+![](/img/000153.jpg)
+
+![](/img/000528.jpg)
+
+## 随机变量的数字特征
+
+### 1
+
+* 题型：已知f(x)求EX+期望的性质
+
+![](/img/215333.jpg)
+
+### 2
+
+* 题型：数学期望应用题
+
+![](/img/1221435.jpg)
+
+![](/img/230539.jpg)
 
 ## 大数定律与中心极限定理
 
