--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -2152,6 +2152,20 @@ intel x86架构cpu
 
 ### 5.1 CPU的功能和基本结构
 
+##### CPU的功能
+
+![](/img/220504.jpg)
+
+##### 运算器和控制器的功能
+
+![](/img/222536.jpg)
+
+##### 运算器的基本结构
+
+![](F:\try\home\themes\fluid\source\img\4434.jpg)
+
+![](F:\try\home\themes\fluid\source\img\224738.jpg)
+
 ### 5.2 指令周期的数据流
 
 ### 5.3 数据通路的功能和基本结构
