--- a/source/_posts/概率论错题.md
+++ b/source/_posts/概率论错题.md
@@ -363,6 +363,54 @@ tags:
 
 ![](/img/230539.jpg)
 
+### 3
+
+* 题型：利用性质，求相关系数
+
+![](/img/082516.jpg)
+
+![](/img/083355.jpg)
+
+### 4
+
+* 题型：判断是否相关
+
+![](/img/090616.jpg)
+
+### 5
+
+![](/img/082516.jpg)
+
+![](/img/083311.jpg)
+
+### 6
+
+![](/img/202335.jpg)
+
+![](/img/202411.jpg)
+
+![](/img/202547.jpg)
+
+### 7
+
+![](/img/203451.jpg)
+
+![](/img/03759.jpg)
+
+### 8
+
+![](/img/204651.jpg)
+
+![](/img/05256.jpg)
+
+![](/img/205618.jpg)
+
+### 9
+
+![](/img/210210.jpg)
+
+![](/img/210409.jpg)
+
 ## 大数定律与中心极限定理
 
 ## 数理统计
