--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -3019,9 +3019,9 @@ intel x86架构cpu
 
 * 充分利用从设备准备数据的这段时间，这段时间把总线的使用权分配给其他设备来使用，从而让总线的数据传输效率变得更高
 
-## 第七章 
+## 第七章 输入/输出系统
 
-### 7.1 第七章
+### 7.1 I/O系统基本概念
 
 #### 7.1.1 输入输出系统和IO控制方式
 
