--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -5548,6 +5548,8 @@ for(int k = 0;k<n;k++){
 
 #### 6.4.5 有向无环图描述表达式
 
+![](/img/043136.jpg)
+
 ##### 有向无环图（DAG）
 
 ![](/img/35207.jpg)
@@ -5598,39 +5600,287 @@ for(int k = 0;k<n;k++){
 
 ![](/img/42451.jpg)
 
-![]()
+![](/img/042751.jpg)
 
-![]()
+![](/img/42806.jpg)
 
-![]()
+![](/img/042930.jpg)
 
-![]()
+![](/img/042941.jpg)
 
-![]()
-
-![]()
-
-![]()
-
-![]()
-
-![]()
-
-
+![](/img/42951.jpg)
 
 #### 6.4.6 拓扑排序
 
+![](/img/3315.jpg)
+
+##### AOV网
+
+![](/img/43348.jpg)
+
+##### yxc拓扑排序笔记
+
+时间复杂度O(n+m)，n表示点数，m表示边数
+
+有向图才有拓扑序列，如果有环没有拓扑序，有向无环图一定有拓扑序列，也被称为拓扑图
+
+![](/img/082115.jpg)
+
+入度是指有多少条边指向自己，因此所有入度为0的点都可以作为起点
+
+出度是指有多少条边出去
+
+* 把所有入度为0的点入队
+  * 一个有向无环图至少存在一个入度为0的点
+  * 有向无环图的拓扑序不一定是唯一的
+
+```c++
+int n,m;
+int h[N],e[N],ne[N],idx;
+int d[N],q[N];//d[n]表示入度，q[n]是拓扑序列
+void add(int a,int b){
+    e[idx] = b;
+    ne[idx] = h[a];
+    h[a]=idx++;
+    
+}
+bool topsort()
+{
+    int hh = 0, tt = -1;
+
+    // d[i] 存储点i的入度
+    for (int i = 1; i <= n; i ++ )
+        if (!d[i])
+            q[ ++ tt] = i;//数组模拟入队
+
+    while (hh <= tt)//队列不空
+    {
+        int t = q[hh ++ ];//取出来队头
+
+        for (int i = h[t]; i != -1; i = ne[i])//枚举t的所有出边t->j，删掉t->j
+        {
+            int j = e[i];//找到出边
+           d[j]--;
+            if ( d[j] == 0)//前面的所有点都已经排好了
+                q[ ++ tt] = j;//j入队
+         
+        }
+    }
+
+    // 如果所有点都入队了，说明存在拓扑序列；否则不存在拓扑序列。
+    return tt == n - 1;
+}
+//出队的顺序就是拓扑序
+```
+
+##### 拓扑排序
+
+![](/img/43508.jpg)
+
+![](/img/043628.jpg)
+
+![](/img/043704.jpg)
+
+![](/img/043737.jpg)
+
+![](/img/3750.jpg)
+
+##### 对有回路的图进行拓扑排序
+
+![](/img/43818.jpg)
+
+##### 拓扑排序的代码实现
+
+```c++
+#define size 100//图中顶点数目的最大值
+typedef struct arcnode{//边表节点
+    int adjvex;//该弧所指向的顶点的位置
+    struct arcnode *nextarc;//指向下一条弧的指针
+    //infotype info;//网的边权值
+}arcnode;
+typedef struct vnode{//定点表节点
+    vertextype data;//定点信息
+    arcnode *firstarc;//指向第一条依附该顶点的弧的指针
+}vnode,adjlist[size];
+typedef struct{
+    adjlist vertices;//邻接表
+    int vexnum,arcnum;//图的顶点数和弧数
+}graph;//graph是以邻接表存储的图类型
+bool topo(graph g){
+    init(s);//初始化栈，存储入度为0的顶点
+    for(int i = 0;i<g.vexnum;i++)
+        if(indegree[i]==0)
+            push(s,i);//将所有入度为0的顶点进栈
+    int count=0;//计数，记录当前已经输出的顶点数
+    while(!isempty(s)){//栈不空，则存在入度为0的顶点
+        pop(s,i);//栈顶元素出栈
+        print[count++]=i;//输出顶点i
+        for(p=g.vertices[i].firstarc;p;p=p->nextarc){
+            //将所有i指向的顶点的入度减1，并将入度减为0的顶点压入栈s
+            v=p->adjvex;
+            if(!(--indegree[v]))
+                push(s,v);//入度为0，则入栈
+        }
+        
+    }//while
+    if(count<g.vexnum)
+        return false;//排序失败，有向图中有回路
+    else 
+        return true;//拓扑排序成功
+}
+```
+
+![](/img/44554.jpg)
+
+![](/img/051716.jpg)
+
+![](/img/51829.jpg)
+
+![](/img/51900.jpg)
+
+![](/img/52019.jpg)
+
+##### 逆拓扑排序
+
+![](/img/052101.jpg)
+
+![](/img/52140.jpg)
+
+##### 逆拓扑排序的实现
+
+![](/img/052217.jpg)
+
+![](/img/52250.jpg)
+
+##### 逆拓扑排序的实现（DFS算法）
+
+![](/img/52327.jpg)
+
+```c++
+void dfstraverse(graph g){//对图g进行深度优先遍历
+    for(v=0;v<g.vexnum;++v)
+        visited[v]=false;//初始化已访问标记数据
+    for(v=0;v<g.vexnum;++v)//本代码中是从v=0开始遍历
+        if(!visited[v])
+            dfs(g,v);
+}
+void dfs(graph g,int v){//从顶点v出发，深度优先边路图g
+    visited[v]=true;//设已访问标记
+  for(w=firstneighbor(g,v);w>=0;w=nextneighbor(g,v,w))
+        if(!visited[w]){//w为u的尚未访问的邻接顶点
+        dfs(g,w);    
+        }//if
+    print(v);//输出顶点
+}
+```
+
+![](/img/053104.jpg)
+
+![](/img/3211.jpg)
+
 #### 6.4.7 关键路径
+
+![](/img/055132.jpg)
+
+![](/img/55142.jpg)
+
+##### AOE网
+
+![](/img/053544.jpg)
+
+![](/img/053623.jpg)
+
+##### 关键路径
+
+![](/img/053732.jpg)
+
+![](/img/53951.jpg)
+
+![](/img/054136.jpg)
+
+![](/img/054214.jpg)
+
+##### 求关键路径的步骤
+
+![](/img/54324.jpg)
+
+###### 求所有事件的最早发生时间
+
+![](/img/054513.jpg)
+
+###### 求所有时间的最迟发生时间
+
+![](/img/054630.jpg)
+
+###### 求所有活动的最早发生时间  
+
+![](/img/736.jpg)
+
+###### 求所有活动的最迟发生时间
+
+![](/img/054819.jpg)
+
+###### 求所有活动的时间余量
+
+![](/img/054903.jpg)
+
+###### 求得关键活动、关键路径
+
+![](/img/54944.jpg)
+
+##### 关键活动、关键路径的特性
+
+![](/img/055033.jpg)
+
+![](/img/055059.jpg)
+
+
 
 ## 第七章 查找
 
 ### 7.1 查找的基本概念
 
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+
+
 ### 7.2 顺序查找和折半查找
+
+#### 7.2.1 顺序查找
+
+#### 7.2.2 折半查找
+
+#### 7.2.3 分块查找
 
 ### 7.3 树形查找
 
+#### 7.3.1 二叉排序树
+
+#### 7.3.2 平衡二叉树
+
+#### 7.3.3 平衡二叉树的删除
+
+#### 7.3.4 红黑树的定义和性质
+
+#### 7.3.5 红黑树的插入
+
+#### 7.3.6 红黑树的删除
+
 ### 7.4 B树和B+树
+
+#### 7.4.1 B树
+
+#### 7.4.2 B树的插入删除
+
+#### 7.4.3 B+树
 
 ### 7.5 散列（hash）表
 
@@ -5640,13 +5890,37 @@ for(int k = 0;k<n;k++){
 
 ### 8.2 插入排序
 
+#### 8.2.1 插入排序
+
+#### 8.2.2 希尔排序
+
 ### 8.3 交换排序
+
+#### 8.3.1 冒泡排序
+
+#### 8.3.2 快速排序
 
 ### 8.4 选择排序
 
+#### 8.4.1 简单选择排序
+
+#### 8.4.2 堆排序
+
+#### 8.4.3 堆的插入删除
+
 ### 8.5 归并排序、基数排序和计数排序
 
-### 8.6 各种内部排序算法的比较及应用
+#### 8.5.1 归并排序
+
+#### 8.5.2 基数排序
 
 ### 8.7 外部排序
+
+#### 8.7.1 外部排序
+
+#### 8.7.2 败者树
+
+#### 8.7.3 置换-选择排序
+
+#### 8.7.4 最佳归并树
 
