--- a/source/_posts/法学转码心得.md
+++ b/source/_posts/法学转码心得.md
@@ -40,5 +40,6 @@ tags: 水一水
 
 * 1.acwing上的语法基础课
 * 2.王道计算机组成原理+数据结构网课
+  * 王道的数据结构代码不足，但是对于算法的讲解比较形象，方便入门理解算法是个什么运行逻辑。acwing则是代码的进一步优化和给出
 * 3.acwing算法基础课
 * 4.王道书
